crates/rolldown_utils/tests/ui/pass_harness/fail_non_zst_pass.stderr
error[E0080]: evaluation panicked: a pass is a name; runtime state belongs in declared slots
 --> $RUST/core/src/panic.rs
  |
  |         $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `rolldown_utils::pass::run_pass::<StatefulPass>::{constant#0}` failed here
  |
 ::: src/pass.rs
  |
  |     assert!(size_of::<P>() == 0, "a pass is a name; runtime state belongs in declared slots");
  |     ----------------------------------------------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/pass.rs
  |
  | /   const {
  | |     assert!(size_of::<P>() == 0, "a pass is a name; runtime state belongs in declared slots");
  | |   }
  | |___^

note: the above error was encountered while instantiating `fn run_pass::<StatefulPass>`
 --> src/pass.rs
  |
  |   match run_pass(pass, pipeline, read, owned) {
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
